# Agente_Energia_Col

./: .env.example  .gitignore  Makefile  tes.ipynb
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/src/: config.py
backend/src/application/use_cases/: get_agents.py  get_market_snapshot.py  get_model_status.py  get_recommendation.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  agent.py  market_data.py  model_version.py  prediction.py  recommendation.py
backend/src/domain/repositories/: __init__.py  i_agent_repository.py  i_market_repository.py  i_model_repository.py  i_prediction_repository.py  i_recommendation_repository.py
backend/src/domain/services/: __init__.py  i_llm_service.py  i_model_store.py
backend/src/domain/value_objects/: __init__.py  energy_mwh.py  price.py  sic_code.py
backend/src/infrastructure/cache/: redis_cache.py
backend/src/infrastructure/db/: base.py  session.py
backend/src/infrastructure/db/migrations/: env.py
backend/src/infrastructure/db/migrations/versions/: ab8330540d1b_add_generation_and_escasez_cols.py  bd630a1c569f_add_unique_constraint_ts_agent.py  eb8fd264527a_initial_schema.py  edbd8c5798b0_fix_recommendation_model_fields.py
backend/src/infrastructure/db/models/: __init__.py  agent_model.py  feature_cache_model.py  market_data_model.py  model_version_model.py  prediction_model.py  recommendation_model.py
backend/src/infrastructure/db/repositories/: __init__.py  pg_agent_repository.py  pg_market_repository.py  pg_model_repository.py  pg_prediction_repository.py  pg_recommendation_repository.py
backend/src/infrastructure/mlflow/: __init__.py  mlflow_model_repository.py
backend/src/infrastructure/storage/: minio_model_store.py
backend/src/interface/api/: deps.py  main.py
backend/src/interface/api/routers/: agents.py  chat.py  market.py  models.py  predictions.py  recommendations.py
backend/src/interface/api/schemas/: agent_schema.py  market_schema.py  model_schema.py  prediction_schema.py  recommendation_schema.py
backend/tests/unit/api/: test_api_routes.py
backend/tests/unit/domain/: test_entities.py  test_value_objects.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
infra/: docker-compose.dev.yml  docker-compose.yml
ml/: pyproject.toml
ml/evaluation/: champion_challenger.py  metrics.py
ml/features/: calendar_features.py  feature_pipeline.py  lag_features.py
ml/models/: base_model.py
ml/models/price_prediction/: xgboost_model.py
ml/registry/: model_registry.py
ml/tests/: test_ml_pipeline.py
orchestration/dags/: _utils.py  (+5 more)
(+40 files in other folders)
