[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "agente-energia-col"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    # Base de datos
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",      # driver async para PostgreSQL
    "psycopg2-binary>=2.9",  # driver sync para Alembic migrations
    "alembic>=1.13",
    # Cache
    "redis>=5.0",
    # Almacenamiento
    "minio>=7.2",
    # HTTP cliente (XM API + Deepseek)
    "httpx>=0.27",
    "openai>=1.30",       # Deepseek usa protocolo compatible con OpenAI
    # LangChain — abstracción de proveedor LLM
    "langchain>=0.3",
    "langchain-openai>=0.2",      # ChatOpenAI: Deepseek + OpenAI
    "langchain-ollama>=0.2",      # ChatOllama: desarrollo local
    "langchain-core>=0.3",
    # MLflow — registro y tracking de modelos ML
    "mlflow>=2.13",
    # ML / Data
    "pydataxm>=0.3",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "joblib>=1.3",
    # Utilidades
    "python-dotenv>=1.0",
    "tenacity>=8.2",      # retry con backoff exponencial (XM API)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",         # TestClient de FastAPI
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
