[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agente-energia-col-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",       # reg:quantileerror requiere >= 1.7, ARM nativo >= 2.0
    "joblib>=1.3",
    "minio>=7.2",
    "pydataxm>=0.5",
    "python-dotenv>=1.0",
    "tenacity>=8.2",      # retry con backoff para XM API
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["..", "."]    # permite import de shared/

[tool.ruff]
line-length = 100
